--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,4 +42,14 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    def lifecycle_version = "2.2.0"
+
+    //뷰모델 - 라이프사이클 관련
+    // ViewModel
+    implementation("androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version")
+
+    //라이브 데이타 - 옵저버 패턴 관련 - 즉 데이터의 변경사항을 알 수 있다.
+    // LiveData
+    implementation("androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version")
 }
